create link for page cadastro and edit color button in form cadastro.

--- a/aplicacao/contest/src/main/resources/templates/cadastro.html
+++ b/aplicacao/contest/src/main/resources/templates/cadastro.html
@@ -69,7 +69,7 @@
 	
 	  if(password.value == password_confirm.value) {
 		    $("#btn_cadastro").prop("disabled", false);
-		    $('#btn_cadastro').css('background-color', '#311b92');
+		    $('#btn_cadastro').css('background-color', '#4a148c');
 	   
 	  }else{
 		  $('#btn_cadastro').css('background-color', '#616161');
