Visualizando Seções Cadastradas , Visualizando Detalhes de Seção , Deletando Seção

--- a/aplicacao/contest/src/main/resources/templates/fragments/organizador_menu_navegacao.html
+++ b/aplicacao/contest/src/main/resources/templates/fragments/organizador_menu_navegacao.html
@@ -10,7 +10,7 @@
 	        <a th:href="@{/eventoOrganizador/ativos}">Eventos Ativos</a>
 	       	<a th:href="@{/eventoOrganizador/inativos}">Eventos Inativos</a>
 
-	       	<a th:href="@{/secao/paginaSecao}">Cadastrar Seção</a>
+	       	<a th:href="@{/secao/paginaSecao}">Visualizar Seções</a>
 
 	       	<a th:if="${eventoPrivado} == true" class="modal-trigger" href="#modalConvidarPessoas">Convidar Pessoas</a>
 
