Funcionalidade Cadastrar usuário externo. Correção code smell na classe PessoaService no método revisoresNoEvento

--- a/aplicacao/contest/src/main/resources/templates/login.html
+++ b/aplicacao/contest/src/main/resources/templates/login.html
@@ -25,7 +25,7 @@
           <p>
             Tenha um bom evento! Para acessar o sistema de cadastro, você deve está na rede da UFC Campus Quixadá!
           </p>
-          <p>Caso você não seja aluno da Universidade Federal do Ceará e deseja fazer seu cadastro, <a th:href="@{/cadastro}">clique aqui</a> e cadastre-se.</p>
+          <p>Caso você não seja aluno da Universidade Federal do Ceará e deseja fazer seu cadastro, <a th:href="@{/cadastroForm}">clique aqui</a> e cadastre-se.</p>
         </div>
         <div class="col s12 m6" >
           <form name="loginForm" th:action="@{/login}" class="valign" method="post">
