Resolvendo os Buchos

--- a/aplicacao/contest/src/main/resources/templates/cadastro.html
+++ b/aplicacao/contest/src/main/resources/templates/cadastro.html
@@ -39,7 +39,7 @@
             </div>
             
             <div class="input-field">
-              <input type="password" id="password_confirm" required="required" name="senha_Confirma" />
+              <input type="password" id="password_confirm" required="required" name="senhaConfirma" />
               <label for="password_confirm">*Repetir Senha</label>
             </div>
             <br/>
