--- a/aplicacao/contest/src/main/resources/templates/cadastro.html
+++ b/aplicacao/contest/src/main/resources/templates/cadastro.html
@@ -30,7 +30,7 @@
             </div>
             
             <div class="input-field">
-              <input type="text" id="cpf" placeholder="Exemplo: 000.000.000-00"  pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" required="required"/>
+              <input type="number" id="cpf" placeholder="Exemplo: 00000000000" required="required"/>
               <label for="cpf">*CPF</label>
             </div>
 
