--- a/aplicacao/contest/src/main/resources/templates/secao/cadastroSecao.html
+++ b/aplicacao/contest/src/main/resources/templates/secao/cadastroSecao.html
@@ -27,34 +27,44 @@
           <form name="cadastroForm" th:action="@{/secao/cadastrarSecao}" class="valign" method="post" id="formCadastro">
             
             <div class="input-field">
-              <input type="text" id="nome_secao" th:name="nomeSecao" required="required"/>
+              <input type="text" id="nome_secao" th:name="nome" required="required"/>
               <label for="nome_secao">Nome</label>
             </div><br/>
             
             <div class="input-field">
-        		<select id="pessoas_select" name="idResponsavel">
+        		Responsável pela Seção
+        		<select id="pessoas_select" name="responsavel">
           			<option value="" disabled="disabled" selected="selected" >Selecione uma pessoa</option>
           			<div th:each="pessoa : ${pessoas}"  >
             			<option th:if="${pessoa.id == idPessoa}" th:value="${pessoa.id}" th:text="${pessoa.nome}" selected="selected"></option>
             			<option th:if="${pessoa.id != idPessoa}" th:value="${pessoa.id}" th:text="${pessoa.nome}" ></option>   
           			</div> 
         		</select> 
-        		<label for="pessoas_select">Responsável pela Seção</label>
       		</div><br/>
       		
       		 <div class="input-field">
-        		<select id="eventos_select" name="idEvento">
+        		Eventos
+        		<select id="eventos_select" name="evento">
           			<option value="" disabled="disabled" selected="selected" >Selecione um Evento</option>
           			<div th:each="evento : ${eventos}"  >
             			<option th:value="${evento.id}" th:text="${evento.nome}"></option>   
           			</div> 
         		</select> 
-        		<label for="eventos_select">Eventos</label>
       		</div><br/>
-
+      		
+      		<div class="input-field">
+              Data
+              <input class="datepicker" type="date" id="data_secao" th:name="dataSecao" required="required"/>
+            </div><br/>
+            
             <div class="input-field">
-              <textarea type="text" class="materialize-textarea validate" id="descricao" th:name="descricao" required="required"></textarea>
-              <label for="descricao">Descrição</label>
+              Horário
+              <input type="text" id="horario" placeholder="Exemplo: 00:00" th:name="horario" required="required"/>
+			</div>
+      		
+            <div class="input-field">
+              <textarea type="text" class="materialize-textarea validate" id="local" th:name="local" required="required"></textarea>
+              <label for="local">Local</label>
             </div>
             <br/>
             <div class="right">
