--- a/aplicacao/contest/src/main/resources/templates/secao/indexSecao.html
+++ b/aplicacao/contest/src/main/resources/templates/secao/indexSecao.html
@@ -29,81 +29,14 @@
         <div  class="card purple darken-4">
             <div class="card-content white-text">
                 <span class="card-title activator" th:text="${secao.nome}"> <i class="material-icons right" id="tolltip1" title="Descrição da Seção">description</i></span>
-                <p th:text="'Descrição: '+${secao.descricao}"></p>
+                <p th:text="'Data: '+${secao.dataSecao}"></p>
+                <p th:text="'Hora: '+${secao.horario}"></p>
+                <p th:text="'Local: '+${secao.local}"></p>
             </div>
            
             <div class="card-action">
-                <a th:href="@{'/secao/secaoTrabalhos/'+${secao.id}}" class="orange-text accent-3">ver seção</a>
-                <a th:href="@{'/secao/excluirSecao/'+${secao.id}}"  class="orange-text accent-3">deletar seção</a>
-            </div>
-        </div>
-    </div>
-	<div>
-    	<div  class="col s12 m4">
-        	<div  class="card purple darken-4">
-            	<div class="card-content white-text">
-                	<span class="card-title activator">Iniciação Científica <i class="material-icons right"  title="Descrição da Seção">description</i></span>
-                	<p>Data: 27/10/2017</p>
-                	<p>Hora: 8:00 AM</p>
-                	<p>Local: Sala 3</p>
-            	</div>
-            	<div class="card-reveal"> <span class="card-title grey-text text-darken-4">Descrição da seção<i class="material-icons right">close</i></span>
-                	<p>Texto para descrever seção</p> </div>
-            	<div class="card-action">
-                	<a href="seçao_trabalhos.html" class="orange-text accent-3">ver seção</a>
-                	<a href='#'  class="orange-text accent-3">deletar seção</a>
-            	</div>
-        	</div>
-    </div>
-    </div>
-
-    <div class="col s12 m4">
-        <div  class="card purple darken-4">
-            <div class="card-content white-text">
-                <span class="card-title activator">Iniciação Científica <i class="material-icons right"  title="Descrição da Seção">description</i></span>
-                <p>Data: 27/10/2017</p>
-                <p>Hora: 8:00 AM</p>
-                <p>Local: Sala 3</p>
-            </div>
-            <div class="card-reveal"> <span class="card-title grey-text text-darken-4">Descrição da seção<i class="material-icons right">close</i></span>
-                <p>Texto para descrever seção</p> </div>
-            <div class="card-action">
-                <a href="seçao_trabalhos.html" class="orange-text accent-3">ver seção</a>
-                <a href='#'  class="orange-text accent-3">deletar seção</a>
-            </div>
-        </div>
-    </div>
-
-    <div class="col s12 m4">
-        <div class="card purple darken-4">
-            <div class="card-content white-text">
-                <span class="card-title activator" >Iniciação Científica <i class="material-icons right"  title="Descrição da Seção">description</i></span>
-                <p>Data: 27/10/2017</p>
-                <p>Hora: 8:00 AM</p>
-                <p>Local: Sala 3</p>
-            </div>
-            <div class="card-reveal"> <span class="card-title grey-text text-darken-4">Descrição da seção<i class="material-icons right">close</i></span>
-                <p>Texto para descrever seção</p> </div>
-            <div class="card-action">
-                <a href="seçao_trabalhos.html" class="orange-text accent-3">ver seção</a>
-                <a href='#'  class="orange-text accent-3">deletar seção</a>
-            </div>
-        </div>
-    </div>
-
-    <div class="col s12 m4">
-        <div class="card purple darken-4">
-            <div class="card-content white-text">
-                <span class="card-title activator" >Iniciação Científica <i class="material-icons right"  title="Descrição da Seção">description</i></span>
-                <p>Data: 27/10/2017</p>
-                <p>Hora: 8:00 AM</p>
-                <p>Local: Sala 3</p>
-            </div>
-            <div class="card-reveal"> <span class="card-title grey-text text-darken-4">Descrição da seção<i class="material-icons right">close</i></span>
-                <p>Texto para descrever seção</p> </div>
-            <div class="card-action">
-                <a href="seçao_trabalhos.html" class="orange-text accent-3">ver seção</a>
-                <a href='#'  class="orange-text accent-3">deletar seção</a>
+                <a th:href="@{'/secao/secaoTrabalhos/'+${secao.id}}" class="orange-text accent-3">Ver Seção</a>
+                <a th:href="@{'/secao/excluirSecao/'+${secao.id}}"  class="orange-text accent-3">Deletar Seção</a>
             </div>
         </div>
     </div>
