--- a/aplicacao/contest/src/main/resources/templates/secao/indexSecao.html
+++ b/aplicacao/contest/src/main/resources/templates/secao/indexSecao.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 <div th:include="fragments/head :: head"></div>
+<link th:href="@{/css/jPages.css}" type="text/css" rel="stylesheet" media="screen,projection" />
 <title>Seção - Contest</title>
 </head>
 <body>
@@ -23,9 +24,9 @@
     
 <br/>
 
-<div class="row" >
+<div class="row" id="itemContainer">
 
-    <div  class="col s12 m4" th:each="secao:${secoes}">
+    <div class="col s12 m4" th:each="secao:${secoes}">
         <div  class="card purple darken-4">
             <div class="card-content white-text">
                 <span class="card-title activator" th:text="${secao.nome}"> <i class="material-icons right" id="tolltip1" title="Descrição da Seção">description</i></span>
@@ -41,19 +42,30 @@
         </div>
     </div>
 
-    <div class="row col s12 center">
-        <ul class="pagination">
-            <li class="disabled"><a href="#"><i class="material-icons">chevron_left</i></a></li>
-            <li class="active"><a href="#">1</a></li>
-            <li class="waves-effect"><a href="#">2</a></li>
-            <li class="waves-effect"><a href="#"><i class="material-icons">chevron_right</i></a></li>
-        </ul>
-    </div>
-
 </div>
-
+<div class="row holder center"></div>
 </div>
 
  <div th:include="fragments/footer :: footer"></div>
+     <script type="text/javascript" th:src="@{/js/jPages.min.js}"></script>
+    <script type="text/javascript">
+    $(document).ready(function(){
+      	//Inicialização do Jpages para realizar a paginação
+    	 $("div.holder").jPages({
+    	        containerID : "itemContainer",
+    	        perPage : 6
+    	    });
+    	    /* on select change */
+    	    $("select").change(function(){
+    	        /* get new nº of items per page */
+    	      var newPerPage = parseInt( $(this).val() );
+    	      /* destroy jPages and initiate plugin again */
+    	      $("div.holder").jPages("destroy").jPages({
+    	            containerID   : "itemContainer",
+    	            perPage       : newPerPage
+    	        });
+    	    });
+      });
+    </script>
 </body>
 </html>
