Corrigido Titulo das Paginas

--- a/aplicacao/contest/src/main/resources/templates/fragments/head.html
+++ b/aplicacao/contest/src/main/resources/templates/fragments/head.html
@@ -4,7 +4,7 @@
     <div th:fragment="head">
     	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<title>Constest - Controle de Eventos de Submissão</title>
+		<title>Contest - Controle de Eventos de Submissão</title>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 		<!-- CSS  -->
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
