Integração Tela Dashboard

--- a/aplicacao/contest/src/main/resources/templates/autor/autor_enviar_trabalho_form.html
+++ b/aplicacao/contest/src/main/resources/templates/autor/autor_enviar_trabalho_form.html
@@ -41,11 +41,11 @@
           
           <div id="autor" class="autor" >
 	          <div class="input-field col m5 s5">
-	            <input id="autor_nome" disabled="disabled"  type="text" th:value="${autor.nome}" />
+	            <input id="autor_nome" disabled="disabled"  type="text" th:value="${pessoa.nome}" />
 	            <label for="autor_nome">Autor</label>
 	          </div>
 	          <div class="input-field col m5 s5">
-	            <input id="autor_email" disabled="disabled" type="text" th:value="${autor.email}" />
+	            <input id="autor_email" disabled="disabled" type="text" th:value="${pessoa.email}" />
 	            <label for="autor_email" >Email Autor</label>
 	          </div>
           </div>
